@@ -1,6 +1,6 @@
 <li class="kchild"{gensource}{codewrapperLeft}{codewrapperRight}>
     <div class="kel {isExpanded} {ktype}">
-        <span class="kel-bg {ktype}"></span>{connectorLeft}<span class="kname">{name}</span>{connectorRight}<em class="karrow ktype">=</em><span class="kshort">{normal}</span><em class="ktype">({type})</em><span class="kolps">&nbsp;</span>
+        <span class="kel-bg {ktype}"></span>{connectorLeft}<span class="kname {key-ktype}">{name}</span>{connectorRight}<em class="karrow ktype">=</em><span class="kshort">{normal}</span><em class="ktype">({type})</em><span class="kolps">&nbsp;</span>
         {sourcebutton}
         <div class="kodsp" style="display: none"></div>
         {help}
