@@ -623,4 +623,17 @@ class ModelTest extends AbstractTest
         $this->assertEquals($this->model, $this->model->setReturnType($data));
         $this->assertEquals($data, $this->model->getReturnType(), 'Get of it out what you put in.');
     }
+
+    /**
+     * Test the setter/getter for the key type.
+     *
+     * @covers \Brainworxx\Krexx\Analyse\Model::setKeyType
+     * @covers \Brainworxx\Krexx\Analyse\Model::getKeyType
+     */
+    public function testSetGetKeyType()
+    {
+        $data = 'just a value';
+        $this->assertEquals($this->model, $this->model->setKeyType($data));
+        $this->assertEquals($data, $this->model->getKeyType(), 'Get of it out what you put in.');
+    }
 }
